--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -1,4 +1,4 @@
 _extends: .github:settings.yml
 repository:
   name: sessionsvc
-  description: CRUD operations service for sessions
+  description: sessions management service
