fix: secrets filename

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,7 +8,7 @@
         "--add-host=appsvc.yag.dc:host-gateway",
         "--add-host=sqldb.yag.dc:host-gateway",
         "--env-file=${localWorkspaceFolder}/.devcontainer/.env",
-        "--env-file=${localWorkspaceFolder}/.devcontainer/secret.env"
+        "--env-file=${localWorkspaceFolder}/.devcontainer/secrets.env"
     ],
     "customizations": {
         "vscode": {
